@@ -416,7 +416,7 @@ linux_rdirect_map(struct os_init_data *ctl)
 	addrxlat_fulladdr_t page_offset;
 	addrxlat_status status;
 
-	if (!(ctl->ctx->cb.read_caps & ADDRXLAT_CAPS(ADDRXLAT_KVADDR)))
+	if (!(ctl->ctx->cb->read_caps & ADDRXLAT_CAPS(ADDRXLAT_KVADDR)))
 		return ADDRXLAT_ERR_NOMETH;
 
 	layout[0].first = 0;
@@ -719,8 +719,8 @@ map_linux_x86_64(struct os_init_data *ctl)
 	/* Make sure physical addresses can be accessed.
 	 * This is crucial for page table translation.
 	 */
-	if (!(ctl->ctx->cb.read_caps & ADDRXLAT_CAPS(ADDRXLAT_MACHPHYSADDR)) &&
-	    !(ctl->ctx->cb.read_caps & ADDRXLAT_CAPS(ADDRXLAT_KPHYSADDR))) {
+	if (!(ctl->ctx->cb->read_caps & ADDRXLAT_CAPS(ADDRXLAT_MACHPHYSADDR)) &&
+	    !(ctl->ctx->cb->read_caps & ADDRXLAT_CAPS(ADDRXLAT_KPHYSADDR))) {
 		status = linux_rdirect_map(ctl);
 		if (status != ADDRXLAT_OK &&
 		    status != ADDRXLAT_ERR_NOMETH &&
